propriedades do projeto configuradas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=email
+server.port=8080
+spring.datasource.url= jdbc:postgresql://loclahost:5432/bancoP
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=updade
