Projeto testado e finalizado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=email
 server.port=8080
-spring.datasource.url= jdbc:postgresql://loclahost:5432/bancoP
+spring.datasource.url= jdbc:postgresql://localhost:5432/bancoP
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=updade
+spring.jpa.hibernate.ddl-auto=update
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=********@gmail.com
-spring.mail.password=********
+spring.mail.username=************@gmail.com
+spring.mail.password=***********
 spring.mail.properties.mail.smtp.auth=true
-pring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
